# sapphire-launcher

./: .gitignore  Cargo.toml  README.md  build-appimage.sh  build.rs
.cargo/: config.toml
src/: main.rs  platform.rs  service.rs  ui.rs
