[package]
name = "sapphire-launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.13", features = ["image", "tokio"] }
image = "0.24"
tokio = { version = "1", features = ["rt", "process", "sync", "io-util", "macros", "fs"] }
tokio-stream = "0.1"
futures = "0.3"
rfd = "0.15"

[build-dependencies]
winres = "0.1"
image = "0.24"

[profile.release]
strip = true
lto = true
opt-level = "z"
